# suntimes-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: cli.rs  geo.rs  main.rs  optimize.rs  output.rs  solar.rs  solar_panel.rs  time.rs  uv.rs
